Fix erroneous wrapping of "website is awesome" img

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ ul {
 .header-container {
     display: flex;
     margin: 0 auto;
-    max-width: 1100px; /* edit this again when free*/
+    max-width: 1100px; 
     height: 60px;
     padding: 0 30px;
     justify-content: space-between;
@@ -67,16 +67,18 @@ ul {
 .img-h1 {
     font-size: 48px;
     color: #F9FAF8;
+    max-width: 450px;
 }
 
 .img-paragraph {
     font-size: 18px;
     color: #E5E7EB;
     padding: 5px 70px 10px 0;
+    max-width: 550px;
 }
 
 .img-section img {
-    max-width: 550px;
+    max-width: 450px;
     max-height: 100%;
 }
 
@@ -86,6 +88,14 @@ ul {
     padding: 5px 25px;
     border-radius: 5px;
     border: 0px;
+    align-self: flex-start;
+}
+
+.img-section-left {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .middle-title {
